examples/test/testpolicy12005.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12005
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key24: value31
      key48: value43
      key0: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value48
          key39: value34
          key48: value33
